missed config file when moving from copy to template

--- a/roles/mongodb/templates/mongo.conf.j2
+++ b/roles/mongodb/templates/mongo.conf.j2
@@ -3,4 +3,4 @@
 # for documentation of all options, see:
 #   http://docs.mongodb.org/manual/reference/configuration-options/
 
-{{ mongo_conf }}
+{{ mongo_config }}
